--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "init": "^0.1.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5"
   }
 }
