--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^7.3.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "nodemailer": "^8.0.1"
   }
 }
