Se implemento el envio de correo, falta verificar

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 port=3000
 GEMINI_API_KEY= AIzaSyBdk2zLZ9gCB_IS5pNMcjjhZVytpbdMrIw
 SECRETORPRIVATEKEY = 789456123
+EMAIL_USER:numerologia@gmail.com
+EMAIL_Pass:12345678@12345yupi
