--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 port=3000
 GEMINI_API_KEY= AIzaSyBdk2zLZ9gCB_IS5pNMcjjhZVytpbdMrIw
+MONGODB_URI= mongodb+srv://jaimitoperez:jaimito01@cluster0.yi3gjms.mongodb.net/?appName=Cluster0
 SECRETORPRIVATEKEY = 789456123
 EMAIL_USER:numerologia@gmail.com
 EMAIL_Pass:12345678@12345yupi
